--- a/app.wxss
+++ b/app.wxss
@@ -16,3 +16,14 @@ view, text {
   font-size: 29rpx;
   color: #333;
 }
+
+.module {
+  background-color: white;
+  margin-bottom: 20rpx;
+}
+
+.module .title {
+  font-size: 32rpx;
+  line-height: 3;
+  padding: 0 30rpx;
+}
