--- a/components/banner/banner.wxml
+++ b/components/banner/banner.wxml
@@ -1,5 +1,5 @@
 <!--components/banner/banner.wxml-->
-<swiper class="swiper" indicator-dots="true" autoplay="true" circular="true">
+<swiper class="banner" indicator-dots="true" autoplay="true" circular="true">
   <block wx:for="{{banners}}" wx:key="id">
     <swiper-item class="swiper-item">
       <image mode="aspectFill" src="{{item.picUrl}}" />
