--- a/app.wxss
+++ b/app.wxss
@@ -11,6 +11,10 @@ view, image, text, navigator {
   margin: 0;
 }
 
+image {
+  max-width: 100%;
+}
+
 view, text {
   font-family: PingFangSC-Light, helvetica, 'Heiti SC';
   font-size: 29rpx;
@@ -26,4 +30,14 @@ view, text {
   font-size: 32rpx;
   line-height: 3;
   padding: 0 30rpx;
+}
+
+.copyright {
+  text-align: center;
+  padding: 20rpx 0;
+}
+
+.copyright text {
+  font-size: 24rpx;
+  color: #777;
 }
