--- a/components/banner/banner.wxss
+++ b/components/banner/banner.wxss
@@ -1,10 +1,10 @@
 /* components/banner/banner.wxss */
-.swiper {
+.banner {
   width: 100%;
   height: 370rpx;
 }
 
-.swiper image {
+.banner image {
   width: 100%;
   height: 100%;
 }
