--- a/pages/user/index/index.wxml
+++ b/pages/user/index/index.wxml
@@ -15,4 +15,8 @@
   </view>
 
   <view class="logout" wx:if="{{hasLogin}}" bindtap="exitLogin">退出登录</view>
+
+  <view class="copyright">
+    <text class="title">聚力创意 © julipay.com</text>
+  </view>
 </view>
