--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -1,4 +1,4 @@
-/* components/detail/detail.wxss */
+/* pages/rank/detail/detail.wxss */
 
 .detail-pic {
   position: relative;
@@ -66,7 +66,7 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  padding: 20rpx;
+  padding: 40rpx 30rpx;
   background-color: white;
   transform: translateY(100%);
   transition: transform 0.3s;
